# t-rust-app

./: Cargo.toml  LICENSE  README.md  cargo-generate.toml  rustfmt.toml
app_name/: Cargo.toml
app_name-lib/: Cargo.toml
name_of_my_app/: Cargo.toml
name_of_my_app/src/: main.rs
