[package]
name = "name_of_my_app"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Logging crates
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling crates
thiserror = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
